--- a/sample4.html
+++ b/sample4.html
@@ -62,6 +62,8 @@ Staple strands from Wickham et al. minimal twist design (Wickham, Shelley FJ, et
 Then, the origami is purified by gel filtration, removing the excess staples.
 Nicking enzymes are added to break the superhelical structure of DNA.
 <img src="./image/step1.jpg" alt="サンプル" width="820px" height="450px">
+<img src="./image/step2.jpg" alt="サンプル" width="820px" height="450px">
+
 
 </p>
 <h3 id="step2">STEP2</h3>
