--- a/sample.html
+++ b/sample.html
@@ -96,6 +96,15 @@ Since UV protection is such a familiar topic, we decided to choose it as our foc
 
 </p>
 
+Relevance
+Our project is technologically interesting because:
+We controlled the distance of the gold nanoparticles (AuNPs) using DNA origami.
+It is possible to control the wavelength that is absorbed by AuNPs easily by changing the distance of them on the sheet.
+We created a large sheet by connecting small DNA origami (70nm x 100nm) via short glue sequence strands. This is a novel technology and has the potential to be applied in many fields.  
+Our project is scientifically interesting because:
+This UV absorbable DNA sheet is made of only DNA and AuNPs. Although the effect of gold nanoparticles upon our body is not clear yet, this simple structure has the potential to be applied directly on our skin or mucous membrane.
+
+
 <h3 id=aplication>APLICATION</h3>
 <p class="aplication">
 This DNA based UV cutting sheet protects you from the harmful UV, and can be used for various situations. It can be used not only in the same way as other UV cutting materials, for instance, for windows, sun glasses and walls, but also in a new way. We propose an eye drop that prevents diseases caused by excess exposure to sunlight. By forming this sheet on our eye, we can protect the entirety of it, not only our pupil as previously developed UV-cut contact lenses do. In addition to this, there is a merit of it being transparent; therefore, it will not change the color of your field of vision. However, because the effect of gold nanoparticles on our human body hasn’t been studied well enough, there may be a long way to realization. That being said, if there is a substitution that has less effect on us than gold particles, this transparent UV cut sheet can be an innovative material.
