--- a/sample4.html
+++ b/sample4.html
@@ -37,69 +37,83 @@
 </body>
  <div id="sidebar">
  <ul>
-<a href="#step1"font size="3" ><li>STEP1</li></a>
+<a href="#step1"font size="3" ><li>Origami observation by AFM</li></a>
 </ul>
 <p>
 <ul>
-<a href="#step2"><li>STEP2</li></a>
-</ul>
-<p>
-<ul>
-<a href="#step3"><li>STEP3</li></a>
+<a href="#step2"><li>Spectrum measurement</li></a>
 </ul>
 </div>
 
 <font size="5">
 <div id="contents">
 
-<h2>EXPERIMENT</h2>
+<h2>RESULT</h2>
 <br>
+1. Origami observation by AFM<br>
+1-1. DNA origami <br>
+1-2. DNA origami with glue sequence strands<br>
+1-3. DNA origami with gold nanoparticles (AuNPs)<br>
+2. Spectrum measurement <br>
 
-<h3 id="step1">STEP1</h3>
+<h3 id="step1">1. Origami observation by AFM</h3>
 <p class="step1" align="center">
-The solution for origami synthesis contains Single-Strand DNA (7000 bases long) as a template of the DNA origami (1 rectangular). This is a circular DNA genome derived from the M13 bacteria phage, M13mp18.
-Staple strands from Wickham et al. minimal twist design (Wickham, Shelley FJ, et al. "Direct observation of stepwise movement of a synthetic molecular transporter." Nature nanotechnology 6.3 (2011): 166-169) are added in the solution and is annealed in a PCR machine using the standard protocol.
-Then, the origami is purified by gel filtration, removing the excess staples.
-Nicking enzymes are added to break the superhelical structure of DNA.
-<img src="./image/step1.jpg" alt="サンプル" width="820px" height="450px">
-<img src="./image/step3-2.jpg" alt="サンプル" width="820px" height="450px">
-
-
+All of the DNA structures were observed by an atomic-force microscope Multimode 8 (Bruker).<br>
+<h4>1-1. DNA origami </h4>
+The AFM images of the origami alone are as below (Fig. 1).
+<center>
+a.<img src="./image/AFM1.jpg" alt="サンプル" width="246px" height="261px">
+b.<img src="./image/AFM2.jpg" alt="サンプル" width="246px" height="261px">
+c.<img src="./image/AFM3.jpg" alt="サンプル" width="246px" height="261px">
+</center>
+<center2>Figure1. AFM image of DNA origami. a, Wide angle view of DNA origami. b, Close-up view of the origami circled in fig. 1-a. c, Close-up view of another sample.
+</center2>
+<p>
+Structures of well-defined rectangular origami were observed (Fig. 1-a,b). They were just about the size we had expected (70nm x 100nm) as well. However, some samples showed origami that were all distorted very similarly (Fig. 1-c). This suggests the modification we made to the several staple strands might have had an effect on the proper formation of the structure. In addition to that, these origami were much larger both in area and height. Since some structures had twice the area of the supposed origami, there may be a possibility that several origami stuck on top of each other or sideways. 
 </p>
-<h3 id="step2">STEP2</h3>
+
+<h4>1-2. DNA origami with glue sequence strands</h4>
+<p>
+Images of origami when glue sequence strands were added are shown below (Fig 2). We let the glue strands react with the origami for 1 hour at room temperature before observation.</p>
+a.<img src="./image/AFM4.jpg" alt="サンプル" width="246px" height="261px">
+b.<img src="./image/AFM5.jpg" alt="サンプル" width="246px" height="261px">
+c.<img src="./image/AFM6.jpg" alt="サンプル" width="246px" height="261px">
+<center2>
+Figure 2. AFM images of DNA origami when glue sequence strands were added. a, Wide angle view of the origami. b, close-up view of the structure circled in Fig. 2-a.
+</center2>
+<p>
+As seen in the images, the origami did not form a large sheet as we had anticipated; the maximum number of origami that were close to each other was 3~4 at the most. However, we noticed there was a large difference in the arrangement of origami when compared to the arrangement of origami lacking the glue strands. The wide-angle view of the origami (Fig2-a.) demonstrates this very well. You can see that almost all of the origami are facing the same direction. 
+There is one more point that should be noticed. Most origami had a taller height than expected, which indicates the stacking of several origami on top of each other.
+</p>
+
+<h4>1-3. DNA origami with gold nanoparticles (AuNPs)</h4>
+<center>
+a.<img src="./image/AFM7.jpg" alt="サンプル" width="246px" height="261px">
+b.<img src="./image/AFM14.jpg" alt="サンプル" width="246px" height="261px">
+</center>
+<center2>
+Figure 3. AFM image of origami added with gold nanoparticles. a, Wide angle view of origami. b, close-up view of the structure circled in Fig. 3-a.
+</center2>
+<p>
+The detection and determination of AuNPs attached to sheet was not very easy. This was because the diameter of the particle was as small as 5nm, and because we did not have a clear image of how a gold particle would actually appear on the screen when attached to an origami. However, there was a significant difference in the appearance of the origami, and so we think AuNPs had at least some kind of effect on the formation of origami. Additionally, we observed many origami from which some small areas were sticking out, creating a white pattern on them. Although, the size of the white area is not close to the size of the AuNPs, we think the creation of the pattern is somehow related with the particles.</p>
+
+
+<h3 id="step2">2. Spectrum measurement</h3>
 <p class="step2">
-To form the DNA sheet, we link the DNA origamis made in Step 1 planarly by bonding them through extended staple strands (see Figure below.) We consider two ways for this bonding to happen correctly:
-The first way is to utilize the Tm (melting temperature) value of the bonding. When we bind single stranded DNA to one origami, and bind the complementary single strand to another origami, these two structures can link with each other when the temperature is low enough for the strands to bind. However, with this method, the origami sheets may form a self-stabilizing 3-dimensional structure during the annealing process of the origami. This would make it difficult for the origami to create a planar sheet.
+Absorption spectrum or the origami was measured with wavelength ranging from 200nm to 900nm (Fig 4).
 </p>
-<img src="./image/sheet_design.png" alt="サンプル" width="400px" height="450px">
-<img src="./image/TMValue.png" alt="サンプル" width="400px" height="450px">
-
-<p class="step2_1">
-The second way is to use an additional strand to link the extended staple strands (S). We call this additional strand, ‘glue strand.’ In order to achieve this method, we first bind single stranded DNAs that do not anneal with itself, such as AAGG, to the origami. Then, those origami are spread over a surface (See figure below). By doing so, we can prevent the sheets from forming 3D structures. Finally, we add the ‘glue strand,’ such as CCCC. This sequence can bind to GGGG, which is found when two sheet-bound DNA strands line up (AAGG-GGAA), and as a consequence connects the origamis. However, since we use two DNA strands to connect them, the distance between them may be too long to maintain the stability of the sheet.
-<br>
-<br>
-<img src="./image/glue.png" alt="サンプル" width="400px" height="450px">
+<center>
+a.<img src="./image/AFM8.jpg" alt="サンプル" width="246px" height="261px">
+b.<img src="./image/AFM9.jpg" alt="サンプル" width="246px" height="261px">
+c.<img src="./image/AFM10.jpg" alt="サンプル" width="246px" height="261px">
+d.<img src="./image/AFM11.jpg" alt="サンプル" width="246px" height="261px">
+e.<img src="./image/AFM12.jpg" alt="サンプル" width="246px" height="261px">
+</center>
+<center2>
+Figure 4. Difference of absorption spectrum (200nm~900nm) of origami when glue sequence strands or AuNPs are added. a, Spectrum of origami itself. Note this solution was prepared by two fold dilution; therefore, the actual absorbance is twice as much as the value stated in the graph. b, Spectrum of origami when glue strands were added. c, Spectrum of origami when gold nanoparticles (AuNP-oligo DNA conjugates) were added. d, Spectrum of gold nanoparticles itself. e, Spectrum of origami with both glue sequence strands and AuNPs.</center2>
+<p>
+All of the samples expect the gold nanoparticles itself showed an absorbance in the range of 200-400nm. Within this range,
 </p>
-
-
-<h3 id="step3">STEP3</h3>
-<p class="step3">
-We attach single stranded DNA strands on a gold nanoparticle by chemical bonding. 
-The binding affinity of sulfur to gold is high; therefore, a thiolated DNA strand can be bonded to a gold nanoparticle by a sulfur molecule.
-This single strand (called “A”), which is bound to gold, consists of 12 bases, CGACGACGACGA, which has a high Tm (melting temperature) value of 40 degrees Celsius.
-</p>
-<p class="step3_1">
-DNA origami are prepared with extended staple strands so that the complementary strand of ‘A’ (called B) sticks out (similar to Wickham et al.'s strategy). These chain A and B form double strands, therefore, the gold particles are fixed to the DNA sheet. We design three sets of these double strands per one gold particle, so that we can make the structure more stable. 
-<p class="step3_2">
-We show the placement of gold particles below.
-<img src="./image/srep3-1.jpg" alt="サンプル" width="400px" height="450px">
-<img src="./image/step3-2.jpg" alt="サンプル" width="400px" height="450px">
-<img src="./image/step3-4.jpg" alt="サンプル" width="400px" height="450px">
-<img src="./image/step3-5.png" alt="サンプル" width="400px" height="450px">
-<img src="./image/step3-6.jpg" alt="サンプル" width="400px" height="450px">
-<img src="./image/step3-7.jpg" alt="サンプル" width="400px" height="450px">
-<img src="./image/step3-8.jpg" alt="サンプル" width="400px" height="450px">
-
 </p>
 </div>
 </div>
