--- a/sample.html
+++ b/sample.html
@@ -51,14 +51,12 @@
 </ul>
 <p>
 <ul>
-<a href="#aplication"><li>APLICATION</li></a>
+<a href="#aplication"><li>APPLICATION</li></a>
  </ul>
 </div>
 
-
-
-
 <div id="contents2">
+
 <br>
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Gh9y6V--jwc" frameborder="0" allowfullscreen></iframe>
@@ -72,15 +70,23 @@
 
 
 <div id="contents">
-<h3 id="abstract1">ABSTRACT</h3>
+<h1>PROJECT</h1>
+
+<h2 id="abstract1">ABSTRACT</h2>
 <p class="abstract1">
-Gold nano particles, which have specific optical activities, are applied to practical use in many filed. In this project, we focus on the property that this particle absorbs light of specific wave length. By using this, we design an optical filter that reduces ultraviolet rays. Under UV, gold nano particles spreaded on a surface of filter absorb UV partially and then passing UV interference each other. In two steps, this filter cuts UV. To accurately create an even distribution of particles, we use multiple rectangular DNA origamis from Rothemund et al.. DNA origamis have some single DNA strands on their surface to attach particles and they are bound to each other by ‘glue’ DNA. This optical filter is a material that both cuts UVs while being transparent at other wavelengths and may enable us to create novel transparent UV cut material, which could be used for contact lenses for instance.
-</p>
-<p class="abstract2">
+Gold nano particles, which have specific optical activities, are applied to practical use in many filed. In this project, we focus on the property that this particle absorbs light of specific wave length. By using this, we design an optical filter that reduces ultraviolet rays. Under UV, gold nano particles spreaded on a surface of filter absorb UV partially and then passing UV interference each other. In two steps, this filter cuts UV. To accurately create an even distribution of particles, we use multiple rectangular DNA origamis from Rothemund et al.. DNA origamis have some single DNA strands on their surface to attach particles and they are bound to each other by ‘glue’ DNA. This optical filter is a material that both cuts UVs while being transparent at other wavelengths and may enable us to create novel transparent UV cut material, which could be used for contact lenses for instance.</p>
 
+<h3>Relevance</h3>
+Our project is technologically interesting because:<br>
+<li>We controlled the distance of the gold nanoparticles (AuNPs) using DNA origami.</li>
+<li>It is possible to control the wavelength that is absorbed by AuNPs easily by changing the distance of them on the sheet.</li>
+<li>We created a large sheet by connecting small DNA origami (70nm x 100nm) via short glue sequence strands. This is a novel technology and has the potential to be applied in many fields.  </li>
+<br>
+Our project is scientifically interesting because:<br>
+<li>This UV absorbable DNA sheet is made of only DNA and AuNPs. Although the effect of gold nanoparticles upon our body is not clear yet, this simple structure has the potential to be applied directly on our skin or mucous membrane.</li>
 </p>
-
-<h3 id="motivation">MOTIVATION</h3>
+<br>
+<h2 id="motivation">MOTIVATION</h2>
 <p class="motivation">
 It is known that gold nanoparticles absorb and interfere with specific lengths of lights based on its density and size.
 <br>
@@ -95,10 +101,18 @@ In order to protect our skin cells from the damage of UV, melanin is produced in
 Since UV protection is such a familiar topic, we decided to choose it as our focus.
 
 </p>
-
-<h3 id=aplication>APLICATION</h3>
+<br>
+<h2 id=aplication>APPLICATION</h2>
 <p class="aplication">
 This DNA based UV cutting sheet protects you from the harmful UV, and can be used for various situations. It can be used not only in the same way as other UV cutting materials, for instance, for windows, sun glasses and walls, but also in a new way. We propose an eye drop that prevents diseases caused by excess exposure to sunlight. By forming this sheet on our eye, we can protect the entirety of it, not only our pupil as previously developed UV-cut contact lenses do. In addition to this, there is a merit of it being transparent; therefore, it will not change the color of your field of vision. However, because the effect of gold nanoparticles on our human body hasn’t been studied well enough, there may be a long way to realization. That being said, if there is a substitution that has less effect on us than gold particles, this transparent UV cut sheet can be an innovative material.
 </p>
+<h3>Specification</h3>
+<p>The goal of this project is to make the solution that absorbs ultra violet specifically. In order to consider the project a success, the following criteria need to be met. <br>
+1. Based on the computer simulation results, the AuNP-attached DNA sheet absorbs ultra violet and that its absorbance is higher than other wavelengths.  <br>
+2. DNA sheet is ideally formed by connecting multiple origami with glue sequence strands.<br>
+3. AuNPs are attached to the sheet/origami in a specific arrangement that we designed.<br>
+4. AuNP-attached DNA sheet shows higher UV absorbance than the DNA sheet itself with the same concentration.<br>   
+</p>
+
 </div>
 </html>
