--- a/sample2.html
+++ b/sample2.html
@@ -35,12 +35,13 @@
 
 
 <div id="contents"><font size="5">
-<h3 id="motivation">DNA ORIGAMI</h3>
+<h1>BACKGROUND</h1>
+<h2 id="motivation">DNA ORIGAMI</h2>
 <p class="origami">
 
 </p>
 <p class="gold nano particle">
-<h3 id="gold particle">GOLD PARTICLE</h3> 
+<h2 id="gold particle">GOLD PARTICLE</h2> 
 
 <p class="dold particle">
 
@@ -48,13 +49,13 @@ For a long time, Colloidal gold nanoparticles (AuNPs) have been used by artists 
 Here, we summarized the properties of gold nanoparticles that are involved in this project.
 </p>
 
-<h4>Absorption</h4>
+<h3>Absorption</h3>
 <p>
 Gold nanoparticles absorb light of a specific wavelength depending on their size and density. This graph shows that UV light, a wave length from 300 to 400nm, is absorbed by gold particles. 
 </p>
 <img src="./image/gold_particle.jpg" alt="サンプル" width="800px" height="450px">
 
-<h4>Interference</h4>
+<h3>Interference</h3>
 <p>
 The principle of interference, that is wave superposition, explains the relation of the total displacement to the individual waves. When two or more propagating waves of same type are incident at a certain point, the total displacement at that point equals to the sum of that of each individual waves.
 <p>
@@ -69,7 +70,7 @@ Wave interference can be seen when rain drops fall into a pond, for example.
  
  Wave equation is given by the following;
  <br>
-f(x,t) =  sin(k(x-x_0)-ωt)
+<img src="./image/siki2.jpg" alt="サンプル" width="350px" height="55px">
 <br>
 where f(x,t) is the magnitude of wave, k is wavenumber, x is the observation point, xo is generation point of wave, ω is angular frequency, and t is time. 
 <br>
@@ -81,7 +82,7 @@ f_total (x,t) = ∑_(x_0)^n▒〖sin(k(x-x_0)-ωt)
 where n is the number of wave generation points.
 </p>
 
-<h4>The Wave Nature of Light</h4>
+<h3>The Wave Nature of Light</h3>
 In Young's double-slit interferometer, light that transmits through each of the slits reacts with each other to make an interference fringe on a screen. This indicates that light possesses the wave nature (wave theory of light), and therefore, light can also be described by the wave equation.
 <p>
 <h5>Solar Spectrum</h5>
@@ -95,7 +96,7 @@ Where B is energy[W/m3], λ is wave length, h is Planck constant 6.626×10−34 
 
 
 
-<h3 id="chemical bond">CHEMICAL BOND</h3>
+<h2 id="chemical bond">CHEMICAL BOND</h2>
 <p class="">
 
 </p>
