--- a/sample3.html
+++ b/sample3.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html>
 
 <head>
 	<meta charset="utf-8" />
@@ -39,29 +39,37 @@
 <font size="5">
  <div id="sidebar">
  <ul>
-<a href="#step1"font size="5" ><li>Materials</li></a>
+<a href="#step1"font size="5" ><li>MATERIALS</li></a>
 </ul>
 <p>
 <ul>
-<a href="#step2"><li>Experiment Methods</li></a>
+<a href="#step2"><li>EXPERIMENT METHODS</li></a>
 </ul>
 <p>
 <ul>
-<a href="#step3"><li>Reference</li></a>
+<a href="#step3"><li>REFERENCE</li></a>
 </ul>
 </div>
 
 <font size="5">
 <div id="contents">
-
-<h2 id="step1">Materials</h2>
+<h1>EXPERIMENT</h1>
+<h2 id="step1">MATERIALS</h2>
 All staple DNA, anchor oligo DNA, glue DNA and gold nanoparticle were purchased from Sigma-Aldrich Japan. 
 <br>
 Single-stranded M13mp18 DNA were purchased from BioLabs Inc.
 
 
-<h2 id="step2">Experiment Methods</h2>
-<h3>Method Ⅰ---Synthesis of origami rectangle (1),(3)</h3>
+<h2 id="step2">EXPERIMENT METHODS</h2>
+<h3>Method Ⅰ---Designing the DNA origami</h3>
+<p>
+We designed our structure based on a previously established DNA origami
+ <a href="sample7.html" title="sample7.html">[1]</a> , and modified the strands a little. This modification was made to allow the AuNPs possible to attach to the sheet, and to allow the origami to connect to each other. The sequences of all the staple strands, the two different kinds of strands (glue strands) needed to connect the origami and the oligo DNA used to create the AuNP-anchor oligo DNA conjugate are available <a href="sample7.html" title="sample7.html">here</a>.<br>We designed the position of AuNPs attached to the sheet so that the distance between each gold particle becomes roughly the same.<br>
+The tip of each triangle in the image below is where we attached the AuNP.
+</p>
+
+
+<h3>Method Ⅱ---Synthesis of origami rectangle <a href="#(1)"font size="5" >(1)</a>,<a href="#(3)"font size="5" >(3)</a></h3>
 <ul2>
 <li>Dissolve each staple strands in 1×TAE buffer and prepare 0.2mM staple solution.</li>
 <li>Mix all staple solution (2μl of each) to prepare staple-mix solution.</li>
@@ -79,7 +87,7 @@ Single-stranded M13mp18 DNA were purchased from BioLabs Inc.
 <li>Resulting solution contains DNA origami rectangles.</li>
 </ul2>
 
-<h3>MethodⅡ---Preparation of AuNP-anchor oligo DNA conjugates (2)</h3>
+<h3>MethodⅢ---Preparation of AuNP-anchor oligo DNA conjugates <a href="#(2)"font size="5" >(2)</a></h3>
 <ul2>
 <li>Dissolve SH-modified ahchor oligo DNA in 0.072M DTT for 1h at room temperature to remove the protective group.</li>
 <li>Purify anchor oligo DNA by using NAP-5 column.</li>
@@ -132,12 +140,12 @@ Cn=(0.26(Abs)×1)/(107×0.5)=0.52×107 M= 52nM
 </center>
 <br>
 <br>
-<h3>MethodⅢ---Attaching AuNP on the surface of DNA origami and colum purification</h3>
+<h3>Method Ⅳ---Attaching AuNP on the surface of DNA origami and colum purification</h3>
 <ul2>
 <li>Mix 15μl DNA origami solution and 172.5μl AuNP-oligo solution and leave 1h at room temperature.</li>
-<li>Purify solution to remove excess staples and AuNP-oligo by using Sephacryl S-300HR  (GE Heaithcare). (3)</li>
+<li>Purify solution to remove excess staples and AuNP-oligo by using Sephacryl S-300HR  (GE Heaithcare). <a href="#(3)"font size="5" >(3)</a></li>
 </ul2>
-<h3>MethodⅣ---AFM observation (3)</h3>
+<h3>Method Ⅴ---AFM observation <a href="#(3)"font size="5" >(3)</a></h3>
 <ul2 type="disc">
 <li>Before AFM, add 2μl glue DNA solution to 98μl purified DNA origami with AuNP solution and leave it more than 1h.</li>
 <li>1μl sample were adsorbed on the mica sheet for 5min at room temperature and then add 50μl 1×TAE buffer.</li>
@@ -147,10 +155,10 @@ Cn=(0.26(Abs)×1)/(107×0.5)=0.52×107 M= 52nM
 
 
 
-<h2 id="step3">Reference</h2>
-(1) Paul W.K.Rothemund. Folding DNA to create nanoscale shapes and patterns. Nature. 2006 Mar 16;440(7082):297-302.<br>
-(2) Taton TA. Preparation of gold nanoparticle-DNA conjugates. Current Protocols in Nucleic Acid Chemistry. 2002 Aug;Chapter 12:Unit 12.2.<br>
-(3) Wickham SF, Endo M, Katsuda Y, Hidaka K, Bath J, Sugiyama H, Turberfield AJ. Direct observation of stepwise movement of a synthetic molecular transporter. Nature Nanotechnology. 2011 Mar;6(3):166-9. <br>
+<h2 id="step3">REFERENCE</h2>
+<a id="(1)">(1)</a> Paul W.K.Rothemund. Folding DNA to create nanoscale shapes and patterns. Nature. 2006 Mar 16;440(7082):297-302.<br>
+<a id="(2)">(2)</a> Taton TA. Preparation of gold nanoparticle-DNA conjugates. Current Protocols in Nucleic Acid Chemistry. 2002 Aug;Chapter 12:Unit 12.2.<br>
+<a id="(3)">(3)</a><a href="sample7.html" title="sample7.html">[1]</a> Wickham SF, Endo M, Katsuda Y, Hidaka K, Bath J, Sugiyama H, Turberfield AJ. Direct observation of stepwise movement of a synthetic molecular transporter. Nature Nanotechnology. 2011 Mar;6(3):166-9. <br>
 
    
 
