--- a/sample5.html
+++ b/sample5.html
@@ -64,14 +64,14 @@
 
 <font size="5">
 <div id="contents">
-<h2>ABOUT US</h2>
-<h3 id="aboutus">ABOUT US</h3>
+<h1>ABOUT US</h>
+<h2 id="aboutus">ABOUT US</h2>
 <p class="aboutus">
 Our team was inaugurated last April, gathering students from various backgrounds, such as biology, chemistry and physics. None of us were familiar with biomolecular design, and we’ve launched this project from scratch. The idea of making an optical filter from DNA origami is the concentration of each member’s specialty, and our team successfully achieved to suggest a unique idea.
 
 </p>
 
-<h3 id="photo">TEAM MEMBERS</h3>
+<h2 id="photo">TEAM MEMBERS</h2>
 <table calss="photo">
 <tr>
    <td><img src="./image/iida.jpg"  height="440"> </td>
@@ -117,7 +117,7 @@ Our team was inaugurated last April, gathering students from various backgrounds
 
 </tr>
 </table>
-<h3 id="photo2">SUPERVISOR</h3>
+<h2 id="photo2">SUPERVISOR</h2>
 <table calss="photo2" 　>
 <tr>
    <td><img src="./image/kato.jpeg"  height="440"> </td>
