--- a/sample6.html
+++ b/sample6.html
@@ -38,26 +38,23 @@
 </body>
  <div id="sidebar">
  <ul>
-<a href="#step1"font size="5" ><li>The Wave Nature of Light</li></a>
+<a href="#step1"font size="5" style="text-align : left" ><li>THE WAVE NATURE of LIGHT</li></a>
 </ul>
 <p>
 <ul>
-<a href="#step2"><li>Attachment and Detachment of DNA sheets</li></a>
+<a href="#step2" style="text-align : left"><li>ATTACHMENT and DETACHMENT of DNA SHEETS</li></a>
 </ul>
-<p>
-<ul>
-<a href="#step3"><li>STEP3</li></a>
-</ul>
+
 </div>
 
 <font size="5">
 <div id="contents">
-
-<h3>The Wave Nature of Light</h3>
+<h1>SIMULATION</h1>
+<h2 id="step1">THE WAVE NATURE of LIGHT</h2>
 <p class="abstract1">
 In Young's double-slit interferometer, light from each side of double-slit make interference fringe on a screen.  This shows a fact that light has the wave nature, and thus, light is also described by the wave equation.
 </p>
-<h4>Solar Spectrum</h4>
+<h3>Solar Spectrum</h3>
 <p>
 Solar spectrum can be calculated with Plank’s law.
 <br>
@@ -91,7 +88,7 @@ Figure2: Solar Spectrum and Spectrum of Interfered Solar Light
 <p class="abstract2">
 </p>
 
-<h3>Attachment and Detachment of DNA sheets</h3>
+<h2 id="step2">ATTACHMENT and DETACHMENT of DNA SHEETS</h2>
 <p class="motivation">
 DNA sheets are attached to each other with two types staple DNA on long and short sides of the sheets. Tm value is the temperature at which a half of DNA double helix dissociates into single strands, and the one on a long side is 71.8℃ while the one on a short side is 58.8℃. This means probabilities of attachments of both sides are different. At the same time, detachments of the sheets also happen. These will cause deviation of or make blanks in a linked structure. Therefore, it is necessary to simulate whether the supposed structure is made. 
 </p>
@@ -106,8 +103,6 @@ The below is simulation results. The graph makes comparisons the total or well a
 
 
 
-<h3>APLICATION</h3>
-<p class="aplication">
-</p>
+
 </div>
 </html>
