--- a/sample4.html
+++ b/sample4.html
@@ -35,32 +35,27 @@
   </nav>
   
 </body>
- <div id="sidebar">
+ <div id="sidebar"　style="text-align : left">
  <ul>
-<a href="#step1"font size="3" ><li>Origami observation by AFM</li></a>
+<a href="#step1"font size="3" style="text-align : left"><li>ORIGAMI OBSERVATION by AFM</li></a>
 </ul>
 <p>
 <ul>
-<a href="#step2"><li>Spectrum measurement</li></a>
+<a href="#step2"><li>SPECTRUM MEASUREMENT</li></a>
 </ul>
 </div>
 
 <font size="5">
 <div id="contents">
 
-<h2>RESULT</h2>
-<br>
-1. Origami observation by AFM<br>
-1-1. DNA origami <br>
-1-2. DNA origami with glue sequence strands<br>
-1-3. DNA origami with gold nanoparticles (AuNPs)<br>
-2. Spectrum measurement <br>
+<h1>RESULT</h1>
 
-<h3 id="step1">1. Origami observation by AFM</h3>
-<p class="step1" align="center">
+<h2 id="step1">1. ORIGAMI OBSERVATION by AFM</h2>
+<p class="step1">
 All of the DNA structures were observed by an atomic-force microscope Multimode 8 (Bruker).<br>
 <h4>1-1. DNA origami </h4>
 The AFM images of the origami alone are as below (Fig. 1).
+<p>
 <center>
 a.<img src="./image/AFM1.jpg" alt="サンプル" width="246px" height="261px">
 b.<img src="./image/AFM2.jpg" alt="サンプル" width="246px" height="261px">
@@ -72,7 +67,7 @@ c.<img src="./image/AFM3.jpg" alt="サンプル" width="246px" height="261px">
 Structures of well-defined rectangular origami were observed (Fig. 1-a,b). They were just about the size we had expected (70nm x 100nm) as well. However, some samples showed origami that were all distorted very similarly (Fig. 1-c). This suggests the modification we made to the several staple strands might have had an effect on the proper formation of the structure. In addition to that, these origami were much larger both in area and height. Since some structures had twice the area of the supposed origami, there may be a possibility that several origami stuck on top of each other or sideways. 
 </p>
 
-<h4>1-2. DNA origami with glue sequence strands</h4>
+<h3>1-2. DNA origami with glue sequence strands</h3>
 <p>
 Images of origami when glue sequence strands were added are shown below (Fig 2). We let the glue strands react with the origami for 1 hour at room temperature before observation.</p>
 a.<img src="./image/AFM4.jpg" alt="サンプル" width="246px" height="261px">
@@ -86,7 +81,7 @@ As seen in the images, the origami did not form a large sheet as we had anticipa
 There is one more point that should be noticed. Most origami had a taller height than expected, which indicates the stacking of several origami on top of each other.
 </p>
 
-<h4>1-3. DNA origami with gold nanoparticles (AuNPs)</h4>
+<h3>1-3. DNA origami with gold nanoparticles (AuNPs)</h3>
 <center>
 a.<img src="./image/AFM7.jpg" alt="サンプル" width="246px" height="261px">
 b.<img src="./image/AFM14.jpg" alt="サンプル" width="246px" height="261px">
@@ -98,7 +93,7 @@ Figure 3. AFM image of origami added with gold nanoparticles. a, Wide angle view
 The detection and determination of AuNPs attached to sheet was not very easy. This was because the diameter of the particle was as small as 5nm, and because we did not have a clear image of how a gold particle would actually appear on the screen when attached to an origami. However, there was a significant difference in the appearance of the origami, and so we think AuNPs had at least some kind of effect on the formation of origami. Additionally, we observed many origami from which some small areas were sticking out, creating a white pattern on them. Although, the size of the white area is not close to the size of the AuNPs, we think the creation of the pattern is somehow related with the particles.</p>
 
 
-<h3 id="step2">2. Spectrum measurement</h3>
+<h2 id="step2">2. SPECTRUM MEASUREMENT</h2>
 <p class="step2">
 Absorption spectrum or the origami was measured with wavelength ranging from 200nm to 900nm (Fig 4).
 </p>
