--- a/sample4.html
+++ b/sample4.html
@@ -107,7 +107,7 @@ e.<img src="./image/AFM12.jpg" alt="サンプル" width="246px" height="261px">
 <center2>
 Figure 4. Difference of absorption spectrum (200nm~900nm) of origami when glue sequence strands or AuNPs are added. a, Spectrum of origami itself. Note this solution was prepared by two fold dilution; therefore, the actual absorbance is twice as much as the value stated in the graph. b, Spectrum of origami when glue strands were added. c, Spectrum of origami when gold nanoparticles (AuNP-oligo DNA conjugates) were added. d, Spectrum of gold nanoparticles itself. e, Spectrum of origami with both glue sequence strands and AuNPs.</center2>
 <p>
-All of the samples expect the gold nanoparticles itself showed an absorbance in the range of 200-400nm. Within this range,
+All of the samples except the gold nanoparticles itself showed a similar absorbance pattern in the range of 200-400nm, with a peak between 200nm and 300nm. The rest of the wavelength did not show any absorbance. Origami with glue strands showed the highest absorbance, while AuNPs without the origami hardly had any absorbance.
 </p>
 </p>
 </div>
