--- a/sample5.html
+++ b/sample5.html
@@ -104,7 +104,7 @@ Our team was inaugurated last April, gathering students from various backgrounds
 <tr>
 
 <td><img src="./image/mai.jpg"  height="440"> </td>
-<td><img src="./image/onda.jpg"  height="440"> </td>
+<td><img src="./image/onda.JPG"  height="440"> </td>
 </tr>
 
 <tr>
